@@ -22,7 +22,7 @@ plugins {
 if (JavaVersion.current() == JavaVersion.VERSION_11) {
     project.ext.jdkVersion = '11'
     project.ext.extraJvmArgs = []
-} else if (JavaVersion.current() == JavaVersion.VERSION_17 || JavaVersion.current() == JavaVersion.VERSION_21) {
+} else if (JavaVersion.current() == JavaVersion.VERSION_17 || JavaVersion.current() == JavaVersion.VERSION_21 || JavaVersion.current() == JavaVersion.VERSION_23) {
     project.ext.jdkVersion = JavaVersion.current().getMajorVersion().toString()
     project.ext.extraJvmArgs = ["--add-opens", "java.base/java.io=ALL-UNNAMED",
                                 "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
@@ -47,7 +47,7 @@ if (JavaVersion.current() == JavaVersion.VERSION_11) {
                                 "--add-opens", "java.base/sun.util.calendar=ALL-UNNAMED",
                                 "--add-opens", "java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED"]
 } else {
-    throw new GradleException("This build must be run with JDK 11 or 17 or 21 but was executed with JDK " + JavaVersion.current())
+    throw new GradleException("This build must be run with JDK 11, 17, 21, or 23 but was executed with JDK " + JavaVersion.current())
 }
 
 allprojects {
@@ -99,7 +99,12 @@ subprojects {
 
     test {
         useJUnitPlatform()
-        jvmArgs '--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED'
+        def args = ['--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED']
+        // Workaround for SecurityManager deprecation in JDK23
+        if (JavaVersion.current() == JavaVersion.VERSION_23) {
+            args.add('-Djava.security.manager=allow')
+        }
+        jvmArgs args
     }
 
     dependencies {
